--- a/Personal Project/site-plan-project.html
+++ b/Personal Project/site-plan-project.html
@@ -11,7 +11,7 @@
 
 <header>
     <h1>Portal Page Site Plan</h1>
-    <h2>Godspower Oriamhen</h2>
+    <h2>Godwin Oriamhen</h2>
     <p>WDD130</p>
 </header>
 
@@ -157,7 +157,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2026 Godspower Oriamhen | WDD130 Site Plan</p>
+    <p>&copy; 2026 Godwin Oriamhen | WDD130 Site Plan</p>
 </footer>
 
 </body>
